# the-glam

./: .gitignore  .pre-commit-config.yaml  README.md  brooks.py  justfile  merged.py  pyproject.toml  test_brooks.py  test_peptides.csv  tia.py  v1_glycopeptides.py
.github/workflows/: deploy-to-pages.yml
data/: chlamy_glycans.csv
lib/: pyproject.toml
lib/src/glam/: __init__.py  _lib.py
lib/stubs/glycowork/motif/: tokenization.pyi
lib/stubs/pyteomics/: auxiliary.pyi  fasta.pyi  mass.pyi  parser.pyi
lib/tests/: _lib_test.py  test.py
lib/tests/data/: algal_spike.faa  chlamy_glycans.csv  chlamy_glycans_and_masses.csv  csv.csv  glycopeptides.txt  tryptic_peptides.txt
web/: bun.lockb  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
web/src/: app.html
web/src/lib/: glam.ts
web/src/routes/: +page.svelte  Glam.svelte
