[project]
name = "glam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "glycowork>=1.4.0",
    "pyteomics>=4.7.5",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
]

[tool.mypy]
mypy_path = "stubs"

[tool.pytest.ini_options]
pythonpath = "src"
